--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.default-property-inclusion: NON_NULL
 
+ecommerce.product.api.name = ecommerce-product-api
+
 #eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
